[package]
name = "ospbase"
version = "0.1.0"
authors = ["xStarlord <xstarlord@turbochain.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lazy_static = "1.4.0"
toml = "0.5.8"
serde_derive = "1.0.123"
serde = "1.0.123"
datetime = "0.5.1"
json = "0.12.4"